--- a/support/template.html
+++ b/support/template.html
@@ -73,8 +73,8 @@
     </nav>
     <nav>
       <ul class="nav nav-tabs" id="myTab" role="tablist">
-        <li class="nav-item" role="presentation">
-          <a class="nav-link active" id="summary-tab" data-toggle="tab" href="#summary" role="tab" aria-controls="summary" aria-selected="true">Summary</a>
+        <li class="nav-item active">
+          <a class="nav-link active" id="summary-tab" data-toggle="tab" href="#summary" role="tab" aria-controls="summary" aria-selected="true" aria-current="page" >Summary</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" id="ssh-tab" data-toggle="tab" href="#ssh" role="tab" aria-controls="ssh" aria-selected="false">SSH Results</a>
@@ -85,7 +85,7 @@
       </ul>
     </nav>
     <div class="tab-content">
-      <div class="tab-pane fade" id="summary" role="tabpanel" aria-labelledby="summary-tab">
+      <div class="tab-pane active" id="summary" role="tabpanel" aria-labelledby="summary-tab">
  
         <h3>Summary</h3>
       ..
